--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,9 @@ navigationFragmentKtx = "2.8.8"
 navigationUiKtx = "2.8.8"
 activity = "1.10.1"
 google-services = "4.4.2"
+playServicesMaps = "19.1.0"
+play-services-places = "17.1.0"
+places = "4.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +42,11 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
+play-services-places = { group = "com.google.android.gms", name = "play-services-places", version.ref = "play-services-places" }
+places = { group = "com.google.android.libraries.places", name = "places", version.ref = "places" }
+
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
